update cdm and cdmrc

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Notice
+======
+
+The origin cdm cannot work on my fedora 15, so I modified a little bit.
+The cdmrc has added Awesome Window Manager
+
 CDM: The Console Display Manager
 ================================
 
